# protons_cpp

./: CMakeLists.txt  accel.cpp  accel.h  config_parser.cpp  config_parser.h  fields.cpp  fields.h  fields_cocoon.cpp  fields_cocoon.h  integrator.cpp  integrator.h  main.cpp  main.h  physical_constants.h  protons  source.cpp  source.h  structs.cpp  structs.h
configs/: config.yml
defaults/detector/: none.yml
defaults/integrator/: RK4.yml  RKDP.yml  euler.yml
defaults/source/: helix.yml  square.yml
graphics/: shaders.h  window.cpp  window.h
runtime/configs/: config.yml  config_full.yml
runtime/defaults/: config.yml
runtime/defaults/detector/: fluence.yml  hdf5.yml  text.yml
runtime/defaults/field/: cocoon.yml  cylindrical.yml  flash.yml  quasi3d.yml
runtime/defaults/integrator/: RKDP.yml
runtime/defaults/interpolation/: linear.yml  natural_neighbor.yml
runtime/defaults/source/: helix.yml  scatter.yml  square.yml
runtime/shaders/: shader.frag  shader.vert
src/: CMakeLists.txt  Makefile  main.cpp  main.h  main_reconstruct.cpp
src/config/: config_parser.cpp  config_parser.h
src/detectors/: detector.cpp  detector.h
src/fields/: fields.cpp  fields.h  fields_cocoon.cpp  fields_cocoon.h  fields_cylindrical.cpp  fields_cylindrical.h  fields_dummy.h  fields_flash.cpp  fields_flash.h  fields_osiris2d.cpp  fields_osiris2d.h  fields_quasi3d.cpp  fields_quasi3d.h
src/graphics/: shaders.cpp  window.cpp  window.h
src/integrators/: integrator.cpp  integrator.h
src/interpolation/: bilinear.cpp  bilinear.h  interpolator.cpp  interpolator.h  linear.cpp  linear.h  natural.cpp  natural.h
src/particles/: structs.cpp  structs.h
src/reconstruction/: invert.cpp  invert.h
src/sources/: source.cpp  source.h
src/util/: accel.cpp  accel.h  h5files.h  invalidateStates.cpp  invalidateStates.h  math.h  ndarray.h  physical_constants.h
